# pkgr

./: CHANGELOG.deb.txt  CHANGELOG.rpm  CHANGELOG.rpm.txt  Makefile  README.md  pkgr.toml  pyproject.toml  setup.py  tags
.github/workflows/: python-package.yml
centos/: Dockerfile  pkgr.spec
docs/: developer.md
pkgr/: archive.py  changelog.py  common.py  config.py  data.py  deb.py  docker.py  pkgr.py  rpm.py  templates.py
tests/: test_pkgr.py
