[tool.poetry]
name = "pkgr"
version = "0.1.0"
description = "Create packages for various Linuses using docker"
authors = ["Dilawar Singh <dilawar.s.rajput@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
typer = "^0.3.2"
loguru = "^0.5.3"

[tool.poetry.scripts]
pkgr = "pkgr.pkgr:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
